# aresdb

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Makefiles  NOTICE  README.md  ares_suite_test.go  glide.yaml  go.mod  go.sum  main.cu  main.go  main_test.go  rdkafka.cmake
.travis/: cleanup.sh  install_clang_tools.sh  install_cuda.sh  install_golang_tools.sh  pre_install.sh  run_unittest.sh
api/: api_test.go  ares_suite_test.go  data_handler.go  data_handler_test.go  data_request.go  debug_handler.go  debug_handler_test.go  debug_request.go  debug_response.go  doc.go  enum_handler.go  enum_handler_test.go  error.go  health_check_handler.go  health_handler_test.go  panic_handler.go  panic_handler_test.go  query_handler.go  query_handler_test.go  query_request.go  query_response.go  request.go  request_test.go  response.go  schema_handler.go  schema_handler_test.go  schema_request.go  schema_response.go  sql_query_handler.go  sql_query_handler_test.go
api/common/: ares_suite_test.go  error.go  query_request.go  query_response.go  request.go  request_test.go  response.go
api/ui/: package.json
broker/: broker_schema_mutator.go  broker_schema_mutator_test.go  broker_suite_test.go  executor.go  handler.go  handler_test.go  query_compiler.go  query_compiler_test.go  query_plan.go  query_plan_agg.go  query_plan_agg_test.go  query_plan_non_agg.go  query_plan_non_agg_test.go  query_plan_test.go  result_merge.go  result_merge_test.go  schema_manager.go
broker/common/: constant.go  types.go
broker/config/: config.go
broker/mocks/: BlockingPlanNode.go  MergeNode.go  StreamingPlanNode.go
broker/util/: assginment.go  assignment.go  assignment_test.go  (+1 more)
cgoutils/: ares_suite_test.go  memory.go  memory.h  memory_test.go  utils.go  utils.h
client/: ares_suite_test.go  connector.go  connector.go.nl  connector_test.go  etcd.go  schema.go
clients/: clients_suite_test.go  controller.go  controller_test.go
cluster/: ares_suite_test.go  types.go
cmd/: cmd.go
common/: config.go  log.go  metrics.go
config/: 0.yaml  1.yaml  2.yaml  3.yaml  ares-broker-local.yaml  ares-broker.yaml  ares-controller.yaml  ares.yaml
datanode/: ares_suite_test.go  bootstrap.go  bootstrap_manager.go  bootstrap_manager_test.go  datanode.go  datanode_test.go  options.go  peer_source.go  peer_source_test.go  table.go  types.go
diskstore/: ares_suite_test.go  diskstore.go  diskstore_util.go  diskstore_util_test.go  local_diskstore.go  local_diskstore_test.go
distributed/: distributed_suite_test.go  error.go  membership.go  membership_test.go  models.go  schema_fetch.go  schema_fetch_test.go
docker/: Dockerfile  README.md
docs/: docker.md
examples/: README.md  examples.go  fo.py
gateway/: controller.go  controller_test.go
gateways/: controller.go  controller_test.go  gateways_suite_test.go
imports/: composite_redolog_manager.go  composite_redolog_manager_test.go  file_redolog_manager.go  file_redolog_manager_test.go  imports_suite_test.go  kafka_partition_reader.go  kafka_partition_reader_test.go  redolog_manager.go  redolog_manager_factory.go  redolog_manager_factory_test.go
integration/: ares_suite_test.go  integration_test.go
memstore/: Ingestor.go  archive_store.go  archive_store_test.go  archive_vector_party.go  archiving.go  archiving_test.go  ares_suite_test.go  backfill.go  backfill_manager.go  backfill_manager_test.go  backfill_test.go  batch.go  batchstats.go  batchstats_test.go  bootstrap.go  bootstrap_test.go  cuckoo_index.go  cuckoo_index_test.go  file_redolog_manager.go  file_redolog_manager_test.go  host_memory_manager.go  host_memory_manager_test.go  ingestion.go  ingestion_test.go  ingestor.go  ingestor_test.go  job_manager.go  job_manager_test.go  job_status.go  json_marshaller_test.go  kafka_ingestor.go  kafka_ingestor_test.go  kafka_redolog_manager.go  kafka_redolog_manager_test.go  live_store.go  live_store_test.go  live_vector_party.go  live_vector_party_test.go  memstore.go  memstore_test.go  (+37 more)
memutils/: CMakeLists.txt  ares_suite_test.go  memory.go  memory.h  memory_test.go
memutils/memory/: cuda_malloc.cu  malloc.c  rmm_alloc.cu
metastore/: ares_suite_test.go  disk_metastore.go  disk_metastore_test.go  error.go  metastore.go  schema_fetch.go  schema_fetch_test.go  validator.go  validator_test.go
query/: algorithm.cu  algorithm.h  algorithm.hpp  algorithm_unittest.cu  aql.go  aql_batchexecutor.go  aql_compiler.go  aql_compiler_test.go  aql_context.go  aql_context_test.go  aql_nonaggr_batchexecutor.go  aql_postprocessor.go  aql_postprocessor_test.go  aql_processor.go  aql_processor_array_test.go  aql_processor_test.go  ares_suite_test.go  ast_visotors.go  binder.h  binder.hpp  concurrent_unordered_map.hpp  device_allocator.go  device_allocator_test.go  device_manager.go  device_manager_test.go  dimension_transform.cu  expression_vm.h  fake_file.hpp  filter.cu  functor.cu  functor.h  functor.hpp  functor_unittest.cu  geo_intersects.cu  hash_lookup.cu  hash_reduction.cu  hll.cu  hll.go  hll_test.go  host_concurrent_unordered_map.hpp  (+30 more)
redolog/: composite_redolog_manager.go  composite_redolog_manager_test.go  file_redolog_manager.go  file_redolog_manager_test.go  kafka_redolog_manager.go  kafka_redolog_manager_test.go  redolog_manager.go  redolog_manager_master.go  redolog_manager_master_test.go  redolog_suite_test.go
scripts/: clang-lint.sh  golang-lint.sh
subscriber/: main.go
testing/: etcd.go  utils.go
utils/: ares_suite_test.go  bootstrap.go  config.go  constants.go  di.go  env.go  env_test.go  error.go  error_test.go  etcd.go  file_system.go  flag.go  hash.go  hash_test.go  hll.go  hll_test.go  http.go  http_test.go  io.go  kafka.go  key.go  memory.go  memory_test.go  metrics.go  metrics_test.go  options.go  reflection.go  reflection_test.go  resource_mapper.go  serialization.go  serialization_test.go  slices.go  slices_test.go  sort_utils.go  stream_serialization.go  stream_serialization_test.go  sync.go  table_writer.go  table_writer_test.go  test_utils.go  (+4 more)
(+618 files in other folders)
